mobile nav close button visibility resolved

--- a/style.css
+++ b/style.css
@@ -299,7 +299,7 @@ li {
 
 .mobile-nav .close {
   font-size: 5rem;
-  color: #fff;
+  color: #000;
   position: absolute;
   right: 0;
   top: 0;
